@@ -1,3 +1,7 @@
+2011-08-08  H.J. Lu  <hjl.tools@gmail.com>
+
+	* binutils-lto-mixed-18.patch: Updated.
+
 2011-08-01  H.J. Lu  <hjl.tools@gmail.com>
 
 	* binutils-shr-99.patch: New file. Replace ...
